--- a/UD5/EJERCICIOS/pom.xml
+++ b/UD5/EJERCICIOS/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>UD5</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>PRUEBAEXAMEN</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ParaPracticar</module>
-        <module>ParaPracticar/InicioJava</module>
-        <module>UD4</module>
-        <module>UD4_EXTRA</module>
-        <module>UD5</module>
-    </modules>
+    <artifactId>EJERCICIOS</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
