--- a/UD5.2/pom.xml
+++ b/UD5.2/pom.xml
@@ -9,15 +9,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>1</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>EJERCICIOS</module>
-    </modules>
+    <artifactId>UD5.2</artifactId>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
