--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>UD4_EXTRA</module>
         <module>UD5</module>
         <module>UD5_EXTRA</module>
+        <module>UD5.2</module>
     </modules>
 
     <properties>
