--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>UD5_EXTRA</module>
         <module>UD5.2</module>
         <module>ParaPracticar/ParaCuandoNoHagoPush</module>
+        <module>UD6_2</module>
     </modules>
 
     <properties>
